更新本地文件

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -37,30 +37,16 @@ http {
     #gzip  on;
 
     # server块：配置虚拟主机的相关参数，一个http中可以有多个server。
+    
     server {
-        # 默认监听本机80端口 localhost:80打开测试
-        listen       80; # 监听端口
-        server_name  localhost;# 监听地址
+        listen	80;
+        server_name  localhost;
+        # 重新设置根目录，默认html
+        location / {
+            root   html;# 设置根目录
+            index  index.html index.htm;# 设置默认页
+        }
 
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        # location块：配置请求的路由，以及各种页面的处理情况。
-        # location / {
-        #     root   html;
-        #     index  index.html index.htm;
-        # }
-
-        # 访问localhost:80/open-platform 时请求跳转到 https://open.lichibeyourself.cn/
-        # location /open-platform {
-        #     proxy_pass https://open.lichibeyourself.cn/; # 请求转向mysvr 定义的服务器列表
-        # }
-
-        # location / {
-        #     root    /cygdrive/e/work/nginx-1.14.2/static; # 设置根目录
-        #     index   index.html index.htm; # 设置默认页
-        # }
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
@@ -69,46 +55,33 @@ http {
         location = /50x.html {
             root   html;
         }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
 
+    # 设置监听192.168.4.175
     server {
-       listen       8080;
-       server_name  localhost;
+        listen	80;
+        server_name  192.168.4.175;
 
-       location /open-platform {
-           proxy_pass https://open.lichibeyourself.cn/;
-       }
-       location /ws {
-           proxy_pass https://open.lichibeyourself.cn/;
-       }
-       location /ecGovBiz-platform {
-           proxy_pass https://open.lichibeyourself.cn/;
-       }
+        location / {
+            root D:\www;# 设置根目录
+            index  index.html index.htm;# 设置默认页
+        }
     }
+    
+    # server {
+    #    listen       8080;
+    #    server_name  localhost;
 
+    #    location /open-platform {
+    #        proxy_pass https://open.lichibeyourself.cn/;
+    #    }
+    #    location /ws {
+    #        proxy_pass https://open.lichibeyourself.cn/;
+    #    }
+    #    location /ecGovBiz-platform {
+    #        proxy_pass https://open.lichibeyourself.cn/;
+    #    }
+    # }
 
     # HTTPS server
     # 
@@ -130,5 +103,4 @@ http {
     #        index  index.html index.htm;
     #    }
     # }
-
 }
